--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Practica1_PMDM"
         tools:targetApi="31">
+        <service
+            android:name=".PrimoServicio"
+            android:enabled="true"
+            android:exported="true"></service>
+
         <activity
             android:name=".EDR_primosActivity"
             android:exported="false" />
