--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Practica1_PMDM"
         tools:targetApi="31">
         <activity
+            android:name="sercios.ejerServicios"
+            android:exported="false" />
+        <activity
             android:name=".EDRprimosXActivity"
             android:exported="false" />
         <activity
